--- a/vet-app/public/index.html
+++ b/vet-app/public/index.html
@@ -86,6 +86,7 @@
     <!-- NOTE BELOW DUMMY STRINGS  -->
     <title>__SEO_TITLE__</title>
     <meta name="description" content="__SEO_DESCRIPTION__" />
+    <meta http-equiv="Content-Security-Policy" content="img-src 'self' data: https://www.linkavet.com;">
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
