--- a/vet-app/public/index.html
+++ b/vet-app/public/index.html
@@ -87,6 +87,8 @@
     <title>__SEO_TITLE__</title>
     <meta name="description" content="__SEO_DESCRIPTION__" />
     <meta http-equiv="Content-Security-Policy" content="img-src 'self' data: https://www.linkavet.com;">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';">
+
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
