update: add seo on main index page

--- a/vet-app/public/index.html
+++ b/vet-app/public/index.html
@@ -58,8 +58,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-    <!-- <title>__SEO_TITLE__</title>
-    <meta name="description" content="__SEO_DESCRIPTION__" /> -->
+    <title>__SEO_TITLE__</title>
+    <meta name="description" content="__SEO_DESCRIPTION__" />
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
